<resources>
    <string name="app_name">Gthr</string>
    <string name="app_name_lowercase">gthr</string>
    <string name="app_name_subtitle">The Only Place For Your Collection</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="birth_day_dialog_title">Select date</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_na">N/A</string>
    <string name="text_new">New</string>
    <string name="rate_negative">-%.2f</string>
    <string name="rate_positive">+%.2f</string>
    <string name="rate_common">$%.2f</string>
    <string name="text_id_under_review">Your ID is under review, it might take up to 24 hours to be verified.</string>
    <string name="intent_email_chooser_title">Send Email…</string>
    <string name="intent_email_chooser_not_found">There are no email client installed on your device</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>
    <string name="menu_feed_title">Feed</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_profile_title">Profile</string>
    <string name="title_account">Account</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_receipts">Receipts</string>
    <string name="title_market">Market</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="forgot_password_text"><u>Forgot Password?</u></string>
    <string name="create_account_text"><u>Create an Account</u></string>
    <string name="dont_have_account_text">Don’t have an account yet?</string>
    <string name="password_info_text">(Password must include at least 8 Characters, 1 Number, 1 Symbol (@, #, $, &amp;, !, etc), at least 1 Upper Case, and at least 1 Lower Case)</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="sign_in_underline_text"><u>Sign In</u></string>
    <string name="enter_valid_email_error_text">Please enter valid Email</string>
    <string name="enter_valid_password_error_text">Please enter valid Password</string>
    <string name="btn_next_text">Next</string>
    <string name="text_user_exists">User already exists!</string>
    <string name="edit_account_info_title">Edit Account Info</string>
    <string name="profile_text">Profile</string>
    <string name="user_info_text">User Info</string>
    <string name="id_verification_text">ID Verification</string>
    <string name="ea_one_text">1</string>
    <string name="ea_two_text">2</string>
    <string name="ea_three_text">3</string>
    <string name="phone_no">xxx-xxx-xxxx</string>
    <string name="otp_verification_text">OTP Verification</string>
    <string name="enter_otp_text">Enter OTP sent to</string>
    <string name="otp_not_received_text">Didn’t receive message?</string>
    <string name="otp_send_again_text"><u>Send Again</u></string>
    <string name="otp_phone_no_text">+%s%s</string>
    <string name="forgot_password_title_text">Forgot Password</string>
    <string name="forgot_password_enter_email_text">Please enter the email address that is associated with your gthr account.</string>
    <string name="password_reset_sent_text">Password Reset Sent</string>
    <string name="password_instructions_text">You will receive reset instructions if there is an email associated with the provided email.</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="finish_text">Finish</string>
    <string name="take_a_pict">Take a picture of the front of your ID</string>
    <string name="secure">Secure</string>
    <string name="congratulat"><![CDATA[Verified Buyers & Sellers]]></string>
    <string name="take_back">Take a picture of the back of your ID</string>
    <string name="replae_front">Replace picture of the front</string>
    <string name="replace_back">Replace picture of the back</string>
    <string name="id_note">A government ID helps us check that you’re really you. It also helps us keep secure, fight fraud, and more.</string>
    <string name="id_verification">ID Verification</string>
    <string name="preview_note_front">Place your ID in the frame with the front facing the camera</string>
    <string name="preview_note_back">Place your ID in the frame with the back facing the camera</string>
    <string name="saved">Saved</string>
    <string name="change">Changed</string>
    <string name="error">Error!</string>
    <string name="permission_denied">Permission to use device Camera denied! Cannot proceed ahead!</string>
    <string name="not_exist">Not exist :</string>
    <string name="next">Next</string>
    <string name="ea_complete">Complete</string>
    <string name="skip_id_verification">Skip</string>
    <string name="retake">Retake</string>
    <string name="dialog_skip_verification_title">Skip Verification</string>
    <string name="dialog_skip_verification_subtitle">ID verification is required to Buy/Sell. You can do this at a later time. Do you want to skip this step for now?</string>
    <string name="dialog_skip_verification_yes">Yes, skip</string>
    <string name="dialog_skip_verification_no">No</string>
    <string name="complete">Complete</string>
    <string name="display_name_info">Username is limited to 24 characters and must contain only letters, numbers, periods, and underscores.</string>
    <string name="display_name">DISPLAY NAME*</string>
    <string name="display_name_hint">24 characters</string>
    <string name="public_profile">Public Profile</string>
    <string name="bio_title">BIO</string>
    <string name="bio_hint_text">150 characters</string>
    <string name="edit_user_info">Edit User Info</string>
    <string name="display_name_error_msg">Username contains illegal character.</string>
    <string name="btn_welcome_text">Welcome!</string>
    <string name="secure_text">Secure</string>
    <string name="verified_buyers_text">Verified Buyers &amp; Sellers</string>
    <string name="discover_text">Discover</string>
    <string name="welcome_buy_and_sell_text">Buy &amp; Sell from over 1,000,000 Cards &amp; Toys</string>
    <string name="understand_text">Understand</string>
    <string name="track_value_of_text">Track the value of your entire collection instantly</string>
    <string name="please_enter">Please enter the email address that is associated with your gthr account.</string>
    <string name="email">EMAIL</string>
    <string name="finish">Finish</string>
    <string name="reset_instruction">You will receive reset instructions if there is an email associated with the provided email.</string>
    <string name="password_reset_sent">Password Reset Sent</string>
    <string name="welcome_screen_title">Congratulations!</string>
    <string name="birthday_name">BIRTHDAY*</string>
    <string name="personal_info_text">Personal Info</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="phone_number">PHONE NUMBER*</string>
    <string name="phone_no_info"><![CDATA[An SMS may be sent to your phone. Message & data rates may apply.]]></string>
    <string name="phone_no_hint">xxx-xxx-xxxx</string>
    <string name="agree_to">Agree to </string>
    <string name="terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="otp_verification">OTP Verification</string>
    <string name="first_name">FIRST NAME*</string>
    <string name="name">Name</string>
    <string name="last_name">LAST NAME*</string>
    <string name="birthday_info">Users must be 18 or older to register.</string>
    <string name="title_activity_maps">Map</string>
    <string name="resend_otp">Resending OTP....</string>
    <string name="sending_otp">Sending OTP...</string>
    <string name="sms_limit_exceed">The SMS quota for the project has been exceeded</string>
    <string name="varification_fails">On verification faild</string>
    <string name="verification_complere">onVerification Completed</string>
    <string name="invalid_request">Invalid request</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="otp_verified">OTP verified</string>
    <string name="invalid_code">Invalid code.</string>
    <string name="sign_successfully">Sign successfully</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="register_successfully">Registered successfully</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="birthday_error_text">Users must be 18 or older to register.</string>
    <string name="password_link_sent">Password reset link sent on mail</string>
    <string name="storage_permission">Allow storage permission</string>
    <string name="must_be_4_char">Must be atleast 4 characters</string>
    <string name="cannot_empty">Can not be empty</string>
    <string name="settings_permissing">Allow permissions from settings</string>
    <string name="permission_needed_text">App needs Camera &amp; Storage permissions to capture photo</string>
    <string name="settings_text">Settings</string>
    <string name="btn_edit_account_info">Edit Account Info</string>
    <string name="btn_shipping_address">Shipping Address</string>
    <string name="btn_active_offers">Active Offers</string>
    <string name="btn_payout_info">Payout Info</string>
    <string name="btn_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="btn_faq_and_help">FAQ and help</string>
    <string name="logout_text">Log Out</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_body">Are you sure you want to logout?</string>
    <string name="dialog_logout_pos_btn">Logout</string>
    <string name="dialog_logout_neg_btn">Cancel</string>
    <string name="ea_birthday_name">BIRTHDAY</string>
    <string name="ea_personal_info_text">Personal Info</string>
    <string name="ea_mm">MM</string>
    <string name="ea_dd">DD</string>
    <string name="ea_yyyy">YYYY</string>
    <string name="ea_phone_number">PHONE NUMBER</string>
    <string name="ea_phone_no_hint">xxx-xxx-xxxx</string>
    <string name="ea_agree_to">Agree to </string>
    <string name="ea_terms_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="ea_otp_verification">OTP Verification</string>
    <string name="ea_first_name">FIRST NAME</string>
    <string name="ea_name">Name</string>
    <string name="ea_last_name">LAST NAME</string>
    <string name="ea_email">Email</string>
    <string name="ea_delete_account"><u>Delete Account</u></string>
    <string name="ea_save_changes">Save Changes</string>
    <string name="ea_birthday_info">Users must be 18 or older</string>
    <string name="edit_acc_name_error">Enter first name</string>
    <string name="edit_acc_last_error">Enter last name</string>
    <string name="edit_acc_phone_no_error">Incomplete phone number</string>
    <string name="edit_acc_empty_email_error">Enter email</string>
    <string name="edit_acc_email_error">Enter valid email</string>
    <string name="delete_acc_title_msg">Type ‘Delete’ to Delete\n Your Account</string>
    <string name="acc_delete">Delete</string>
    <string name="edit_acc_birthday_error">Users must be 18 or older.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_user_data_update_success">User data updated successfully!</string>
    <string name="address1">ADDRESS 1</string>
    <string name="address2">ADDRESS 2</string>
    <string name="full_name_builder">%s %s</string>
    <string name="city_builder">%s,</string>
    <string name="state_pincode_builder">%s %s</string>
    <string name="edit_shipping_address_text">Edit Shipping Address</string>
    <string name="add_new_address_text">Add New Address</string>
</resources>