<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_please_enter"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/please_enter"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/dp_60"
        android:gravity="center_horizontal|top"
        />


    <com.gthr.gthrcollect.utils.customviews.CustomEditText
        android:id="@+id/et_display_name"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/tv_please_enter"
        app:edit_title="@string/email"
        app:edit_hint="@string/email_address"
        app:edit_success_state="BLUE"
        android:src="@drawable/ic_right"
        android:layout_marginHorizontal="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <com.gthr.gthrcollect.utils.customviews.CustomAuthenticationButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/sp_30"
        android:text="@string/reset_password_text"
        android:textSize="@dimen/sp_25"
        android:layout_marginBottom="@dimen/dp_25">

    </com.gthr.gthrcollect.utils.customviews.CustomAuthenticationButton>

</androidx.constraintlayout.widget.ConstraintLayout>