<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.eaprofile.EaProfileFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/guideline_edit_account_info" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guideline_edit_account_info"
            app:layout_constraintStart_toStartOf="parent" />



        <TextView
            android:layout_marginTop="16dp"
            style="@style/EditAccountPageTitle"
            android:text="@string/public_profile"
            android:id="@+id/tv_public_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>



        <com.gthr.gthrcollect.utils.customviews.CustomEditText
            android:id="@+id/et_display_name"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_public_profile"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:edit_title="@string/display_name"
            app:edit_hint="@string/display_name_hint"
            app:edit_success_state="BLUE"
            android:src="@drawable/ic_right"
            app:edit_info="@string/display_name_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_display_name"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            android:id="@+id/tv_bio_title"
            android:text="@string/bio_title"
            android:textSize="@dimen/text_size_medium"
            android:textAllCaps="true"
            android:fontFamily="@font/lato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatEditText
            app:layout_constraintTop_toBottomOf="@+id/tv_bio_title"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            android:paddingVertical="@dimen/padding_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/et_Bio"
            android:layout_width="0dp"
            android:minLines="2"
            android:maxLines="5"
            android:gravity="top"
            android:layout_height="wrap_content"
            android:hint="@string/bio_hint_text"
            android:background="@drawable/edit_text_gray_bg"
            android:fontFamily="@font/lato"
            android:inputType="textMultiLine"
            android:layout_marginTop="@dimen/margin_medium"
            android:paddingHorizontal="@dimen/padding_normal"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/text_size_medium" />


        <com.gthr.gthrcollect.utils.customviews.CustomSecondaryButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:drawableEnd="@drawable/ic_next_arrow"
            android:text="@string/edit_user_info"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:secondary_button_state="DISABLE" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>