<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_reset_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_reset_sent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_25"
        android:textSize="@dimen/sp_25"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>

    <TextView
        android:id="@+id/tv_please_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_instruction"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_lable"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:gravity="center_horizontal|top"
        />




    <com.gthr.gthrcollect.utils.customviews.CustomAuthenticationButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/sp_30"
        android:text="@string/finish"
        android:textSize="@dimen/sp_25"
        android:layout_marginBottom="@dimen/dp_25">

    </com.gthr.gthrcollect.utils.customviews.CustomAuthenticationButton>

</androidx.constraintlayout.widget.ConstraintLayout>